--- a/Cats99/app/views/cats/new.html.erb
+++ b/Cats99/app/views/cats/new.html.erb
@@ -4,28 +4,39 @@
     </label>
     <br>
     <br>
-    <select name='color' >
+    <select name='cat[color]' >
         <option value='Select Color' disabled='true' selected='true'> Select Color </option>
-        <% @colors.each do |color| %>
-            <option value='<%= color %>'><%= color %></option>
+        <% @cat.class.colors.each do |color| %>
+            <option value='<%= color %>' selected='<%= @cat.color == color %>'><%= color %></option>
+        
         <% end %>
     </select>
 
-     <label for='sex'>Sex:
-        <label> Female:
-        <input name='sex' type="radio" >
-        </label>
+     <label >Sex:
         <label> Male:
-        <input name='sex' type="radio" >
+        <input name='cat[sex]' type="radio" value="M" checked='<%= @cat.sex == 'M'%>'>>
+        </label>
+        <label> Female:
+        <input name='cat[sex]' type="radio" value="F" checked='<%= @cat.sex == 'F'%>'>
         </label>
     </label>
     <br>
-    <label for="start">Birth Date:</label>
+    <label>Birth Date:</label>
 
-    <input type="date" id="start" name="trip-start"
-        value="2022-04-01"
+    <input type="date" name="cat[birth_date]"
+        value="<%= @cat.birth_date || 2022-04-01 %>"
         min="1980-01-01" max="2022-12-31">
+    <br>
+    <label>Description:
+        <input type='text' name='cat[description]'value>
+    
+    </label> 
+    <br>
+
+    <button>Add New Cat </button>
+
     </form>
+    
 
 <% if @errors %>
     <% @errors.each do |error| %>
